Made some minor changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <option disabled selected value> -- Select a Model -- </option>
                             <option>Multinomial Naive Bayes</option>
                             <option>Support Vector Machine</option>
-                            <option>Recurrent Neural Networks</option>
+                            <option>K-Nearest Neighbor</option>
                             <option>Long Short Term Memory</option>
                         </select>
                     </div>
@@ -58,12 +58,6 @@
                     </div>
                     <button type="button" onclick="callAPI();" class="btn btn-primary btn-lg">Analyze!</button>
                 </form>
-                <div class="mastfoot">
-                    <div class="inner">
-                        <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a
-                                href="https://twitter.com/mdo">@mdo</a>.</p>
-                    </div>
-                </div>
 
                 <!-- Button trigger modal -->
                 <button type="button" id= "modalLauncher" style="display: none;" class="btn btn-primary" data-toggle="modal"
